--- a/package.json
+++ b/package.json
@@ -6,23 +6,33 @@
     "deploy": "fly deploy --remote-only",
     "dev": "remix dev",
     "start": "remix-serve build",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "format": "prettier --write --no-error-on-unmatched-pattern {app,scripts}/**/*.{ts,tsx}; prisma format",
+    "etl": "node --no-warnings --loader ts-node/esm/transpile-only scripts/etl.ts"
   },
   "dependencies": {
+    "@prisma/client": "^4.9.0",
     "@remix-run/node": "^1.11.1",
     "@remix-run/react": "^1.11.1",
     "@remix-run/serve": "^1.11.1",
+    "cli-progress": "^3.11.2",
+    "dotenv": "^16.0.3",
     "isbot": "^3.6.5",
+    "node-fetch": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.11.1",
     "@remix-run/eslint-config": "^1.11.1",
+    "@types/cli-progress": "^3.11.0",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
+    "prettier": "^2.8.3",
     "prisma": "^4.9.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
   },
   "engines": {
