--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "remix-serve build",
     "typecheck": "tsc",
     "format": "prettier --write --no-error-on-unmatched-pattern {app,scripts}/**/*.{ts,tsx}; prisma format",
-    "etl": "node --no-warnings --loader ts-node/esm/transpile-only scripts/etl.ts"
+    "etl": "node --no-warnings --loader ts-node/esm/transpile-only scripts/etl.mts"
   },
   "dependencies": {
     "@prisma/client": "^4.9.0",
