Move away from fly

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -14,10 +14,7 @@ services:
       timeout: 3s
 
   web:
-    build:
-      context: .
-      args:
-        - DATABASE_URL=postgres://postgres:postgres@db:5432
+    image: "loathers-museum"
     environment:
       - DATABASE_URL=postgres://postgres:postgres@db:5432
     ports:
