--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@remix-run/serve": "^1.11.1",
     "cli-progress": "^3.11.2",
     "dotenv": "^16.0.3",
+    "downshift": "^7.2.0",
     "isbot": "^3.6.5",
     "node-fetch": "^3.3.0",
     "react": "^18.2.0",
