--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -3,3 +3,14 @@ version: "3.9"
 services:
   web:
     image: "ghcr.io/loathers/museum:main"
+    labels:
+      ofelia.job-local.etl.schedule: "0 5 * * *"
+      ofelia.job-local.etl.command: "KOL_HTTP_USERNAME=${KOL_HTTP_USERNAME} KOL_HTTP_PASSWORD=${KOL_HTTP_PASSWORD} yarn run etl"
+
+  ofelia:
+    image: mcuadros/ofelia:latest
+    depends_on:
+      - web
+    command: daemon --docker
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock:ro
