More ofelia fiddling

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -3,6 +3,9 @@ version: "3.9"
 services:
   web:
     image: "ghcr.io/loathers/museum:main"
+    labels:
+      ofelia.job-local.etl.schedule: "0 5 * * *"
+      ofelia.job-local.etl.command: "KOL_HTTP_USERNAME=${KOL_HTTP_USERNAME} KOL_HTTP_PASSWORD=${KOL_HTTP_PASSWORD} yarn run etl"
 
   ofelia:
     image: mcuadros/ofelia:latest
@@ -12,6 +15,5 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     labels:
-      ofelia.job-exec.etl.container: "web"
-      ofelia.job-exec.etl.schedule: "0 5 * * *"
-      ofelia.job-exec.etl.command: "KOL_HTTP_USERNAME=${KOL_HTTP_USERNAME} KOL_HTTP_PASSWORD=${KOL_HTTP_PASSWORD} yarn run etl"
+      ofelia.job-local.heartbeat.schedule: "@daily"
+      ofelia.job-local.heartbeat.command: "echo 'heartbeat"
