--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cli-progress": "^3.11.2",
     "dotenv": "^16.0.3",
     "downshift": "^7.2.0",
+    "entities": "^4.4.0",
     "isbot": "^3.6.5",
     "node-fetch": "^3.3.0",
     "react": "^18.2.0",
