--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "etl": "node --no-warnings --loader ts-node/esm/transpile-only scripts/etl.mts"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.7.1",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.1",
