--- a/package.json
+++ b/package.json
@@ -7,36 +7,36 @@
     "start": "remix-serve build",
     "start:prod": "prisma migrate deploy && yarn run start",
     "typecheck": "tsc",
-    "format": "prettier --write --no-error-on-unmatched-pattern {app,scripts}/**/*.{ts,tsx,mts}; prisma format",
+    "format": "prettier --write .; prisma format",
     "etl": "node --no-warnings --loader ts-node/esm/transpile-only scripts/etl.mts"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.0.19",
-    "@chakra-ui/react": "^2.7.1",
+    "@chakra-ui/icons": "^2.1.0",
+    "@chakra-ui/react": "^2.8.0",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@prisma/client": "^5.0.0",
-    "@remix-run/node": "^1.18.1",
-    "@remix-run/react": "^1.18.1",
-    "@remix-run/serve": "^1.18.1",
+    "@remix-run/node": "^1.19.1",
+    "@remix-run/react": "^1.19.1",
+    "@remix-run/serve": "^1.19.1",
     "cli-progress": "^3.11.2",
     "dotenv": "^16.0.3",
     "downshift": "^8.0.0",
     "entities": "^4.4.0",
-    "framer-motion": "^10.12.21",
-    "isbot": "^3.6.5",
+    "framer-motion": "^10.13.0",
+    "isbot": "^3.6.13",
     "node-fetch": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.18.1",
-    "@remix-run/eslint-config": "^1.18.1",
+    "@remix-run/dev": "^1.19.1",
+    "@remix-run/eslint-config": "^1.19.1",
     "@types/cli-progress": "^3.11.0",
-    "@types/node": "^20.4.2",
+    "@types/node": "^20.4.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "eslint": "^8.45.0",
