--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-node_modules
-.yarn-error.log
-.DS_Store
-.vscode
+/node_modules
 
-/.cache
 /build
 /public/build
-.env
+
+/.vscode
+/.cache
+/.env
