--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "scripts": {
     "build": "bun run remix build",
     "dev": "bun run remix dev",
-    "start": "bun run remix-serve build",
-    "typecheck": "tsc",
+    "start": "bun run remix-serve build/index.js",
     "format": "prettier --write . && prisma format",
     "deploy": "fly deploy --remote-only",
     "etl": "bun run scripts/etl.mts"
@@ -21,29 +20,27 @@
     "@prisma/client": "^5.6.0",
     "@remix-run/node": "^2.3.1",
     "@remix-run/react": "^2.3.1",
-    "@remix-run/serve": "^2.3.1",
-    "dotenv": "^16.0.3",
     "downshift": "^8.2.3",
     "entities": "^4.4.0",
     "framer-motion": "^10.16.5",
     "isbot": "^3.7.1",
-    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "ts-node": "^10.9.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.3.1",
     "@remix-run/eslint-config": "^2.3.1",
+    "@remix-run/serve": "^2.3.1",
     "@types/cli-progress": "^3.11.5",
     "@types/node": "^20.9.4",
-    "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
+    "@types/react": "^18.2.38",
+    "bun-types": "^1.0.14",
     "eslint": "^8.54.0",
+    "node-fetch": "^3.3.2",
     "postgres": "^3.4.3",
     "prettier": "^3.1.0",
-    "prisma": "^5.6.0",
-    "typescript": "^5.3.2"
+    "prisma": "^5.6.0"
   },
   "engines": {
     "node": ">=18"
