--- a/package.json
+++ b/package.json
@@ -28,13 +28,14 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "latest",
     "@remix-run/dev": "^2.3.1",
     "@remix-run/eslint-config": "^2.3.1",
     "@remix-run/serve": "^2.3.1",
     "@types/cli-progress": "^3.11.5",
     "@types/node": "^20.9.4",
-    "@types/react-dom": "^18.2.17",
     "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.17",
     "bun-types": "^1.0.14",
     "eslint": "^8.54.0",
     "node-fetch": "^3.3.2",
