--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "entities": "^4.4.0",
     "framer-motion": "^10.16.5",
     "isbot": "^3.7.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "node-fetch": "^3.3.2",
+    "postgres": "^3.4.3",
+    "prisma": "^5.6.0",
+    "react-dom": "^18.2.0",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "latest",
@@ -39,10 +42,7 @@
     "@types/react-dom": "^18.2.17",
     "bun-types": "^1.0.14",
     "eslint": "^8.54.0",
-    "node-fetch": "^3.3.2",
-    "postgres": "^3.4.3",
-    "prettier": "^3.1.0",
-    "prisma": "^5.6.0"
+    "prettier": "^3.1.0"
   },
   "engines": {
     "node": ">=18"
