--- a/fly.toml
+++ b/fly.toml
@@ -9,7 +9,7 @@ primary_region = "lhr"
 [build]
 
 [deploy]
- release_command = "bun run db-init"
+ release_command = "yarn run db-init"
 
 [http_service]
   internal_port = 3000
@@ -25,8 +25,15 @@ primary_region = "lhr"
   memory_mb = 1024
 
 [processes]
-  app = "bun run start"
+  app = "yarn run start"
   cron = "supercronic /app/crontab"
 
 [[services]]
   processes = ["app"]
+
+[[http_service.checks]]
+  grace_period = "10s"
+  interval = "30s"
+  method = "GET"
+  timeout = "5s"
+  path = "/healthcheck"
