--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for loathers-museum on 2023-11-27T15:13:16Z
+# fly.toml app configuration file generated for loathers-museum on 2023-11-28T09:39:01Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -9,7 +9,11 @@ primary_region = "lhr"
 [build]
 
 [deploy]
- release_command = "yarn run db-init"
+  release_command = "yarn run db-init"
+
+[processes]
+  app = "yarn run start"
+  cron = "supercronic /app/crontab"
 
 [http_service]
   internal_port = 3000
@@ -19,21 +23,15 @@ primary_region = "lhr"
   min_machines_running = 0
   processes = ["app"]
 
+  [[http_service.checks]]
+    interval = "30s"
+    timeout = "5s"
+    grace_period = "10s"
+    method = "GET"
+    path = "/healthcheck"
+
 [[vm]]
   cpu_kind = "shared"
   cpus = 1
   memory_mb = 1024
-
-[processes]
-  app = "yarn run start"
-  cron = "supercronic /app/crontab"
-
-[[services]]
-  processes = ["app"]
-
-[[http_service.checks]]
-  grace_period = "10s"
-  interval = "30s"
-  method = "GET"
-  timeout = "5s"
-  path = "/healthcheck"
+  processes = ["app", "cron"]
