--- a/package.json
+++ b/package.json
@@ -2,49 +2,49 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "remix build",
-    "dev": "remix dev",
-    "start": "remix-serve build",
-    "start:prod": "prisma migrate deploy && yarn run start",
-    "typecheck": "tsc",
-    "format": "prettier --write .; prisma format",
-    "etl": "node --no-warnings --loader ts-node/esm/transpile-only scripts/etl.mts"
+    "build": "yarn run remix build",
+    "dev": "yarn run remix dev",
+    "start": "yarn run remix-serve build/index.js",
+    "format": "prettier --write . && prisma format",
+    "deploy": "fly deploy --remote-only",
+    "etl": "node --loader ts-node/esm/transpile-only scripts/etl.mts",
+    "db-init": "node --loader ts-node/esm/transpile-only scripts/init.mts"
   },
   "dependencies": {
-    "@chakra-ui/icons": "^2.1.0",
-    "@chakra-ui/react": "^2.8.0",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@chakra-ui/system": "^2.6.2",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@prisma/client": "^5.0.0",
-    "@remix-run/node": "^1.19.1",
-    "@remix-run/react": "^1.19.1",
-    "@remix-run/serve": "^1.19.1",
-    "cli-progress": "^3.11.2",
-    "dotenv": "^16.0.3",
-    "downshift": "^8.0.0",
+    "@prisma/client": "^5.6.0",
+    "@remix-run/node": "^2.3.1",
+    "@remix-run/react": "^2.3.1",
+    "@remix-run/serve": "^2.3.1",
+    "downshift": "^8.2.3",
     "entities": "^4.4.0",
-    "framer-motion": "^10.13.0",
-    "isbot": "^3.6.13",
-    "node-fetch": "^3.3.0",
+    "framer-motion": "^10.16.5",
+    "isbot": "^3.7.1",
+    "node-fetch": "^3.3.2",
+    "postgres": "^3.4.3",
+    "prisma": "^5.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.19.1",
-    "@remix-run/eslint-config": "^1.19.1",
-    "@types/cli-progress": "^3.11.0",
-    "@types/node": "^20.4.4",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "eslint": "^8.45.0",
-    "prettier": "^3.0.0",
-    "prisma": "^5.0.0",
-    "typescript": "^5.1.6"
+    "@remix-run/dev": "^2.3.1",
+    "@remix-run/eslint-config": "^2.3.1",
+    "@types/cli-progress": "^3.11.5",
+    "@types/node": "^20.9.4",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.17",
+    "eslint": "^8.54.0",
+    "prettier": "^3.1.0"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=18"
   }
 }
