--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "yarn run remix build",
     "dev": "yarn run remix dev",
     "start": "yarn run remix-serve build/index.js",
+    "start:prod": "prisma migrate deploy && yarn run start",
     "format": "prettier --write . && prisma format",
     "etl": "node --loader ts-node/esm/transpile-only scripts/etl.mts",
     "db-init": "node --loader ts-node/esm/transpile-only scripts/init.mts"
