--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/node": "^20.10.1",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
+    "dotenv": "^16.4.5",
     "eslint": "^8.54.0",
     "prettier": "^3.1.0"
   },
