--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 node_modules
-.yarn-error.log
 .DS_Store
 .vscode
 
@@ -7,3 +6,13 @@ node_modules
 /build
 /public/build
 .env
+
+# Yarn (not using Zero-Installs)
+.yarn-error.log
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
