--- a/package.json
+++ b/package.json
@@ -14,37 +14,38 @@
     "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
     "@chakra-ui/system": "^2.6.2",
-    "@emotion/cache": "^11.13.0",
-    "@emotion/react": "^11.13.0",
+    "@emotion/cache": "^11.13.1",
+    "@emotion/react": "^11.13.3",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.13.0",
-    "@prisma/client": "^5.17.0",
-    "@remix-run/node": "^2.10.3",
-    "@remix-run/react": "^2.10.3",
-    "@remix-run/serve": "^2.10.3",
-    "downshift": "^9.0.6",
+    "@prisma/client": "^5.19.1",
+    "@remix-run/node": "^2.11.2",
+    "@remix-run/react": "^2.11.2",
+    "@remix-run/serve": "^2.11.2",
+    "downshift": "^9.0.8",
     "entities": "^5.0.0",
-    "framer-motion": "^11.3.8",
-    "isbot": "^5.1.13",
+    "framer-motion": "^11.3.31",
+    "isbot": "^5.1.17",
     "node-fetch": "^3.3.2",
     "postgres": "^3.4.4",
-    "prisma": "^5.17.0",
+    "prisma": "^5.19.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.4"
   },
   "devDependencies": {
-    "@remix-run/dev": "^2.10.3",
-    "@remix-run/eslint-config": "^2.10.3",
-    "@types/node": "^20.14.11",
-    "@types/react": "^18.3.3",
+    "@eslint/js": "^9.9.1",
+    "@remix-run/dev": "^2.11.2",
+    "@remix-run/eslint-config": "^2.11.2",
+    "@types/node": "^22.5.2",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "dotenv": "^16.4.5",
-    "eslint": "^8.57.0",
+    "eslint": "^9.9.1",
     "prettier": "^3.3.3",
-    "tsx": "^4.16.2",
-    "vite": "^5.3.4",
-    "vite-tsconfig-paths": "^4.3.2"
+    "tsx": "^4.19.0",
+    "vite": "^5.4.2",
+    "vite-tsconfig-paths": "^5.0.1"
   },
   "engines": {
     "node": ">=18"
