--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@remix-run/serve": "^2.11.2",
     "downshift": "^9.0.8",
     "entities": "^5.0.0",
-    "framer-motion": "^11.3.31",
+    "framer-motion": "^11.5.4",
     "isbot": "^5.1.17",
     "node-fetch": "^3.3.2",
     "postgres": "^3.4.4",
@@ -34,17 +34,19 @@
     "typescript": "^5.5.4"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
+    "@eslint/js": "^9.10.0",
     "@remix-run/dev": "^2.11.2",
-    "@remix-run/eslint-config": "^2.11.2",
-    "@types/node": "^22.5.2",
+    "@types/node": "^22.5.4",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "dotenv": "^16.4.5",
-    "eslint": "^9.9.1",
+    "eslint": "^9.10.0",
+    "eslint-plugin-react": "^7.35.2",
     "prettier": "^3.3.3",
     "tsx": "^4.19.0",
-    "vite": "^5.4.2",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.4.0",
+    "vite": "^5.4.3",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "engines": {
