--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "node-fetch": "^3.3.2",
     "postgres": "^3.4.4",
     "prisma": "^5.21.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0-rc-77b637d6-20241016",
+    "react-dom": "19.0.0-rc-77b637d6-20241016",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
     "@remix-run/dev": "^2.13.1",
     "@types/node": "^22.7.6",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc",
     "dotenv": "^16.4.5",
     "eslint": "^9.12.0",
     "eslint-plugin-react": "^7.37.1",
@@ -50,10 +50,12 @@
     "vite-tsconfig-paths": "^5.0.1"
   },
   "resolutions": {
+    "@types/react": "npm:types-react@rc",
+    "@types/react-dom": "npm:types-react-dom@rc",
     "@emotion/utils": "1.4.0"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   },
   "packageManager": "yarn@4.2.1"
 }
