--- a/package.json
+++ b/package.json
@@ -11,42 +11,41 @@
   },
   "type": "module",
   "dependencies": {
-    "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "^2.10.3",
+    "@chakra-ui/react": "^3.0.0",
     "@chakra-ui/system": "^2.6.2",
     "@emotion/cache": "^11.13.1",
     "@emotion/react": "^11.13.3",
     "@emotion/server": "^11.11.0",
-    "@emotion/styled": "^11.13.0",
-    "@prisma/client": "^5.21.0",
+    "@prisma/client": "^5.21.1",
     "@remix-run/node": "^2.13.1",
     "@remix-run/react": "^2.13.1",
     "@remix-run/serve": "^2.13.1",
     "downshift": "^9.0.8",
     "entities": "^5.0.0",
-    "framer-motion": "^11.11.9",
     "isbot": "^5.1.17",
+    "next-themes": "^0.3.0",
     "node-fetch": "^3.3.2",
     "postgres": "^3.4.4",
-    "prisma": "^5.21.0",
-    "react": "19.0.0-rc-77b637d6-20241016",
-    "react-dom": "19.0.0-rc-77b637d6-20241016",
+    "prisma": "^5.21.1",
+    "react": "19.0.0-rc-45804af1-20241021",
+    "react-dom": "19.0.0-rc-45804af1-20241021",
+    "react-icons": "^5.3.0",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
-    "@eslint/js": "^9.12.0",
+    "@eslint/js": "^9.13.0",
     "@remix-run/dev": "^2.13.1",
-    "@types/node": "^22.7.6",
+    "@types/node": "^22.7.9",
     "@types/react": "npm:types-react@rc",
     "@types/react-dom": "npm:types-react-dom@rc",
     "dotenv": "^16.4.5",
-    "eslint": "^9.12.0",
-    "eslint-plugin-react": "^7.37.1",
+    "eslint": "^9.13.0",
+    "eslint-plugin-react": "^7.37.2",
     "prettier": "^3.3.3",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.9.0",
-    "vite": "^5.4.9",
+    "typescript-eslint": "^8.11.0",
+    "vite": "^5.4.10",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "resolutions": {
