--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   "devDependencies": {
     "@eslint/js": "^9.18.0",
     "@remix-run/dev": "^2.15.2",
+    "@remix-run/fs-routes": "^2.15.2",
+    "@remix-run/route-config": "^2.15.2",
     "@types/node": "^22.10.9",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
