--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "build": "remix vite:build",
-    "dev": "remix vite:dev",
-    "start": "remix-serve ./build/server/index.js",
+    "build": "react-router build",
+    "dev": "react-router dev",
+    "start": "react-router-serve ./build/server/index.js",
+    "typecheck": "react-router typegen && tsc",
     "format": "prettier --write . && prisma format",
     "etl": "node --import tsx scripts/etl.ts",
     "db-init": "node --import tsx scripts/init.ts"
@@ -16,10 +17,10 @@
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
+    "@emotion/styled": "^11.14.0",
     "@prisma/client": "^6.2.1",
-    "@remix-run/node": "^2.15.2",
-    "@remix-run/react": "^2.15.2",
-    "@remix-run/serve": "^2.15.2",
+    "@react-router/fs-routes": "^7.1.3",
+    "@react-router/node": "^7.1.3",
     "downshift": "^9.0.8",
     "entities": "^6.0.0",
     "isbot": "^5.1.21",
@@ -30,15 +31,15 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.4.0",
+    "react-router": "^7.1.3",
     "typescript": "^5.7.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.18.0",
-    "@remix-run/dev": "^2.15.2",
-    "@remix-run/fs-routes": "^2.15.2",
-    "@remix-run/route-config": "^2.15.2",
+    "@react-router/dev": "^7.1.3",
+    "@react-router/serve": "^7.1.3",
     "@types/node": "^22.10.9",
-    "@types/react": "^19.0.7",
+    "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "dotenv": "^16.4.7",
     "eslint": "^9.18.0",
