--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,24 @@
 {
-  "include": ["env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [".react-router/types/**/*", "**/*.ts", "**/*.tsx"],
   "compilerOptions": {
-    "module": "ESNext",
-    "lib": ["DOM", "DOM.Iterable", "ES2021"],
-    "isolatedModules": true,
-    "esModuleInterop": true,
-    "jsx": "react-jsx",
-    "moduleResolution": "Bundler",
-    "resolveJsonModule": true,
-    "target": "ES2019",
-    "strict": true,
     "allowJs": true,
-    "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+    "jsx": "react-jsx",
+    "lib": ["DOM", "DOM.Iterable", "ES2021"],
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "noEmit": true,
     "paths": {
       "~/*": ["./app/*"]
     },
+    "resolveJsonModule": true,
+    "rootDirs": [".", "./.react-router/types"],
     "skipLibCheck": true,
-    // Remix takes care of building everything in `remix build`.
-    "noEmit": true
+    "strict": true,
+    "target": "ES2019",
+    "types": ["@react-router/node", "vite/client"]
   }
 }
