--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@eslint/js": "^9.18.0",
     "@react-router/dev": "^7.1.3",
     "@react-router/serve": "^7.1.3",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.1",
     "@types/node": "^22.10.9",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
