Upgrade dependencies and remove dotenv

--- a/package.json
+++ b/package.json
@@ -7,51 +7,50 @@
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc",
     "format": "prettier --write . && prisma format",
-    "etl": "node --import tsx scripts/etl.ts",
-    "db-init": "node --import tsx scripts/init.ts",
-    "items-seen-from-mafia": "node --import tsx scripts/itemsSeenFromMafia.ts"
+    "etl": "node --env-file=.env --import tsx scripts/etl.ts",
+    "db-init": "node --env-file=.env --import tsx scripts/init.ts",
+    "items-seen-from-mafia": "node --env-file=.env --import tsx scripts/itemsSeenFromMafia.ts"
   },
   "type": "module",
   "dependencies": {
-    "@chakra-ui/react": "^3.9.0",
+    "@chakra-ui/react": "^3.26.0",
     "@chakra-ui/system": "^2.6.2",
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
-    "@emotion/styled": "^11.14.0",
-    "@prisma/client": "^6.4.1",
-    "@react-router/fs-routes": "^7.2.0",
-    "@react-router/node": "^7.2.0",
-    "downshift": "^9.0.8",
-    "entities": "^6.0.0",
-    "isbot": "^5.1.23",
-    "next-themes": "^0.4.4",
+    "@emotion/styled": "^11.14.1",
+    "@prisma/client": "^6.15.0",
+    "@react-router/fs-routes": "^7.8.2",
+    "@react-router/node": "^7.8.2",
+    "downshift": "^9.0.10",
+    "entities": "^6.0.1",
+    "isbot": "^5.1.30",
+    "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
-    "postgres": "^3.4.5",
-    "prisma": "^6.4.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "postgres": "^3.4.7",
+    "prisma": "^6.15.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-icons": "^5.5.0",
-    "react-router": "^7.2.0",
-    "typescript": "^5.8.2"
+    "react-router": "^7.8.2",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@react-router/dev": "^7.2.0",
-    "@react-router/serve": "^7.2.0",
+    "@eslint/js": "^9.34.0",
+    "@react-router/dev": "^7.8.2",
+    "@react-router/serve": "^7.8.2",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@types/node": "^22.13.9",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "data-of-loathing": "^2.0.1",
-    "dotenv": "^16.4.7",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react": "^7.37.4",
-    "prettier": "^3.5.3",
-    "tsx": "^4.19.3",
-    "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.0",
-    "vite": "^6.2.0",
+    "@types/node": "^24.3.1",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "data-of-loathing": "^2.2.0",
+    "eslint": "^9.34.0",
+    "eslint-plugin-react": "^7.37.5",
+    "prettier": "^3.6.2",
+    "tsx": "^4.20.5",
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.42.0",
+    "vite": "^7.1.4",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "resolutions": {
